@@ -1,3 +1,9 @@
+2005-12:02  Richard Frith-Macdonald <rfm@gnu.org>
+
+	opentool.in:
+	openapp.in:
+	Honor the GNUSTEP_CONFIG_FILE environment variable.
+
 2005-11-28  Richard Frith-Macdonald <rfm@gnu.org>
 
 	* GNUstep.conf.in: Use new variables for handling backslashes in
